--- a/scoreKeeper.html
+++ b/scoreKeeper.html
@@ -15,31 +15,22 @@
 
 <p>Playing to: <span>5</span></p>
 
-
-<input type="number"><br><br>
+<input type="number">
+<div class="buttons">
 <button id="p1">Player One</button>
 <button id="p2">Player Two</button>
 <button id="reset">Reset</button>
-
-<div class="row">
-<div class="col-sm p-4"><i class="far fa-hand-rock"></i><br>
-<p>The rock is when you place your hand into the form of a simple fist.</p></div>
-<div class="col-sm p-4"><i class="far fa-hand-paper"></i>
-<p>The paper is when you place your hand in an outstretched position.</p></div>
-<div class="col-sm p-4"><i class="far fa-hand-scissors"></i>
-<p>This scissors is when you hold your fist with your index and middle finger pointing outwards in a V shape.</p></div>
 </div>
 
-<p>The rules to play are pretty simple.<br>
-The game is played where players deliver hand signals that will represent the elements of the game; rock, paper and scissors.<br>
-The outcome of the game is determined by 3 simple rules:<br><br>
-	
-Rock wins against scissors.<br>
-Scissors win against paper.<br>
-Paper wins against rock.</p>
+<div class="row">
+	<div class="col-md-2 offset-3"><i class="far fa-hand-rock"></i><p id="text">Rock</p></div>
+	<div class="col-md-2"><i class="far fa-hand-paper"></i><p id="text">Paper</p></div>
+	<div class="col-md-2"><i class="far fa-hand-scissors"></i><p id="text">Scissors</p></div>
+</div>
 </div>
 
 <script type="text/javascript" src="scoreKeeper.js"></script>
 
 </body>
 </html>
+
